:bug: Rewrite a complex URL that GitHub's notebook renderer struggled with

--- a/doc/addition.ipynb
+++ b/doc/addition.ipynb
@@ -71,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The core piece of our addition program will be a [full adder](https://en.wikipedia.org/wiki/Adder_(electronics)#Full_adder).  A full adder inputs three bits—two single-bit values and a carry from a previous sum—and outputs two bits—a sum and a carry.  Full adders can be chained together to add multi-bit numbers in much the same way that one would add multi-digit decimal numbers with pencil and paper.\n",
+    "The core piece of our addition program will be a <a href=\"https://en.wikipedia.org/wiki/Adder_(electronics)#Full_adder\">full adder</a>.  A full adder inputs three bits—two single-bit values and a carry from a previous sum—and outputs two bits—a sum and a carry.  Full adders can be chained together to add multi-bit numbers in much the same way that one would add multi-digit decimal numbers with pencil and paper.\n",
     "\n",
     "But how can we express a full adder using NchooseK?  The `tt2nck` helper program that comes with NchooseK can express any truth table as an NchooseK primitive.  Here's the truth table for a full adder, in which the columns represent, respectively, {carry in, A, B, carry out, sum}:\n",
     "```\n",
