Specify explicitly that the Adder table should have no border

--- a/doc/addition.ipynb
+++ b/doc/addition.ipynb
@@ -188,7 +188,7 @@
    "source": [
     "It's finally time to connect all of the pieces created above!  The plan is to instantiate one `Adder` for each of the `nbits` bits we intend to add.\n",
     "\n",
-    "<table>\n",
+    "<table style=\"border: none\">\n",
     "    <tr>\n",
     "        <td></td>\n",
     "        <td></td>\n",
